--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,3 +1,6 @@
+<!--  cuando estemos en el editor web el src es =  src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"   -->
+<!--  cuando estemos en el eclipse el src es: src="resources/sap-ui-core.js"   -->
+
 <html> 
 	<head> 
 			<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -5,7 +8,7 @@
 			<title>openSAP - Developing Web Apps with SAPUI5</title>
 		<script 
 			id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-compatVersion="edge"
