--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,10 +5,11 @@
 	<head> 
 			<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 			<meta charset="utf-8"> 
+			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 			<title>openSAP - Developing Web Apps with SAPUI5</title>
 		<script 
 			id="sap-ui-bootstrap"
-			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-compatVersion="edge"
