--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
 			<meta charset="utf-8"> 
 			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 			<title>openSAP - Developing Web Apps with SAPUI5</title>
-		<script 
+		<script src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
 			id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_bluecrystal"
