--- a/sap.f.tutorial.fiori.2.01/webapp/index2.html
+++ b/sap.f.tutorial.fiori.2.01/webapp/index2.html
@@ -6,10 +6,11 @@
 	<title>SAP Fiori 2.0 App Tutorial</title>
 
 	<script id="sap-ui-bootstrap"
-		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
 		data-sap-ui-resourceroots='{
-			"sap.ui.demo.fiori2": "./"
+			"sap.ui.demo.fiori2": "./",
+			"sap.ui.demo.mock": "https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/"
 		}'
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-compatVersion="edge"
@@ -19,7 +20,6 @@
 </head>
 
 <body class="sapUiBody sapUiSizeCompact">
-	<H2>HOLA</H2>
 	<div data-sap-ui-component
 		data-name="sap.ui.demo.fiori2"
 		data-height="100%"
