"Step 3" Unificando en App principal ↩️ y Eliminando carpeta antigua

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,7 +14,9 @@
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-preload="async" 
 			data-sap-ui-resourceroots='{ 
-			"brait_app": "./" }'> 
+			"brait_app": "./","sap.ui.demo.mock": "https://openui5.hana.ondemand.com/test-resources/sap/ui/documentation/sdk/"
+			}'
+			> 
 		</script>
 		<script>
 			sap.ui.getCore().attachInit(function () {
