--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Quickstart Tutorial</title>
 	<script id="sap-ui-bootstrap"
 		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_belize"
+		data-sap-ui-theme="sap_tradeshow"
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-resourceroots='{"Quickstart": "./"}'
 		data-sap-ui-onInit="module:Quickstart/index"
