--- a/Odata.V4/webapp/index.html
+++ b/Odata.V4/webapp/index.html
@@ -12,6 +12,7 @@
 		}'
 		data-sap-ui-oninit="module:sap/ui/core/tutorial/odatav4/initMockServer"
 		data-sap-ui-compatVersion="edge"
+		data-sap-ui-preload="async" 
 		data-sap-ui-async="true">
 	</script>
 </head>
